[gd_scene load_steps=5 format=3 uid="uid://dm3oqhffhprfy"]

[ext_resource type="Script" path="res://Scripts/UI/city_ui.gd" id="1_f0888"]
[ext_resource type="Texture2D" uid="uid://bul31ap566nua" path="res://Art/world_heroes/elf_druid.png" id="1_wb616"]
[ext_resource type="Texture2D" uid="uid://cm7cmywivoyey" path="res://Art/world_heroes/elf_stalker.png" id="3_iev4l"]
[ext_resource type="Texture2D" uid="uid://c6xx0gugwhq82" path="res://Art/world_heroes/elf_noble.png" id="4_jhtcp"]

[node name="CityUi" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -135.0
offset_right = 754.0
grow_vertical = 0
script = ExtResource("1_f0888")

[node name="HeroRecruitment" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -654.0
offset_right = 1048.0
offset_bottom = -146.0
grow_vertical = 0

[node name="RecruitHeroLayout" type="VBoxContainer" parent="HeroRecruitment"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="HeroImage" type="TextureRect" parent="HeroRecruitment/RecruitHeroLayout"]
layout_mode = 2
texture = ExtResource("1_wb616")
expand_mode = 5

[node name="BuyHeroButton" type="Button" parent="HeroRecruitment/RecruitHeroLayout"]
layout_mode = 2
size_flags_vertical = 8
text = "Buy Hero
‚úî"

[node name="RecruitHeroLayout2" type="VBoxContainer" parent="HeroRecruitment"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="HeroImage" type="TextureRect" parent="HeroRecruitment/RecruitHeroLayout2"]
layout_mode = 2
texture = ExtResource("3_iev4l")
expand_mode = 5

[node name="BuyHeroButton" type="Button" parent="HeroRecruitment/RecruitHeroLayout2"]
layout_mode = 2
size_flags_vertical = 8
text = "Buy Hero
0 ü™ì| 0 ‚õèÔ∏è| 0 üíé"

[node name="RecruitHeroLayout3" type="VBoxContainer" parent="HeroRecruitment"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="HeroImage" type="TextureRect" parent="HeroRecruitment/RecruitHeroLayout3"]
layout_mode = 2
texture = ExtResource("4_jhtcp")
expand_mode = 5

[node name="BuyHeroButton" type="Button" parent="HeroRecruitment/RecruitHeroLayout3"]
layout_mode = 2
size_flags_vertical = 8
text = "Buy Hero
0 ü™ì| 0 ‚õèÔ∏è| 0 üíé"

[node name="RecruitUnits" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = -590.0
offset_right = 375.0
offset_bottom = -197.0
grow_vertical = 0

[node name="UnitsToBuy" type="VBoxContainer" parent="RecruitUnits"]
layout_mode = 2

[node name="Label" type="Label" parent="RecruitUnits/UnitsToBuy"]
layout_mode = 2
text = "Buy:
"

[node name="Button" type="Button" parent="RecruitUnits/UnitsToBuy"]
layout_mode = 2
text = "Unit1"

[node name="Button2" type="Button" parent="RecruitUnits/UnitsToBuy"]
layout_mode = 2
text = "Unit2"

[node name="Button4" type="Button" parent="RecruitUnits/UnitsToBuy"]
layout_mode = 2
text = "Unit3"

[node name="Button3" type="Button" parent="RecruitUnits/UnitsToBuy"]
layout_mode = 2
text = "Unit3"

[node name="Button5" type="Button" parent="RecruitUnits/UnitsToBuy"]
layout_mode = 2
text = "Unit3"

[node name="VisitingHeroArmy" type="VBoxContainer" parent="RecruitUnits"]
layout_mode = 2

[node name="Label" type="Label" parent="RecruitUnits/VisitingHeroArmy"]
layout_mode = 2
text = "Army:"

[node name="Button" type="Button" parent="RecruitUnits/VisitingHeroArmy"]
layout_mode = 2
text = "Spearman"

[node name="Button2" type="Button" parent="RecruitUnits/VisitingHeroArmy"]
layout_mode = 2
text = "Archer"

[node name="Button3" type="Button" parent="RecruitUnits/VisitingHeroArmy"]
layout_mode = 2
text = "Dryad
"

[node name="Button4" type="Button" parent="RecruitUnits/VisitingHeroArmy"]
layout_mode = 2
text = "Dryad
"

[node name="Button5" type="Button" parent="RecruitUnits/VisitingHeroArmy"]
layout_mode = 2
text = "Dryad
"

[node name="Buildings" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = -702.0
offset_right = 327.0
offset_bottom = -159.0
grow_vertical = 0

[node name="Label" type="Label" parent="Buildings"]
layout_mode = 2
text = "Buy:
"

[node name="Button" type="Button" parent="Buildings"]
layout_mode = 2
text = "Woodmill
asd"

[node name="Button2" type="Button" parent="Buildings"]
layout_mode = 2
text = "Coal mine
asd"

[node name="Button3" type="Button" parent="Buildings"]
layout_mode = 2
text = "Farmers village
asd"

[node name="Button4" type="Button" parent="Buildings"]
layout_mode = 2
text = "Troll village
asd"

[node name="OpenButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -126.0
offset_right = 663.0
grow_vertical = 0

[node name="ShowRecruitHeroesUI" type="Button" parent="OpenButtons"]
layout_mode = 2
text = "Recruit Heroes"

[node name="ShowRecruitUnitsUI" type="Button" parent="OpenButtons"]
layout_mode = 2
text = "Recruit Units"

[node name="ShowBuildUi" type="Button" parent="OpenButtons"]
layout_mode = 2
text = "Buildings"

[connection signal="pressed" from="OpenButtons/ShowRecruitHeroesUI" to="." method="_on_show_recruit_heroes_ui_pressed"]
[connection signal="pressed" from="OpenButtons/ShowRecruitUnitsUI" to="." method="_on_show_recruit_units_ui_pressed"]
[connection signal="pressed" from="OpenButtons/ShowBuildUi" to="." method="_on_show_build_ui_pressed"]
